<resources>

    <string name="app_name">Walmart</string>
    <string name="logo">Logo</string>
    <string name="enter_email">Email Address (required)</string>
    <string name="enter_email_req">Email Address*</string>
    <string name="enter_first_name">First Name*</string>
    <string name="enter_last_name">Last Name*</string>
    <string name="enter_password">Password (required)</string>
    <string name="enter_password_req">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_into_account">Sign into your account</string>
    <string name="create_account">Create a new account!</string>
    <string name="create_your_account">Create your account</string>
    <string name="have_no_account">--- Don\'t have an account yet? ---</string>
</resources>